[tool.poetry]
name = "pyhctb"
version = "0.0.6"
description = ""
authors = ["David Young <dmyoung9@asu.edu>"]
readme = "README.md"
homepage = "https://www.github.com/dmyoung9/pyhctb/"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
bs4 = "^0.0.1"
mechanicalsoup = "^1.3.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.2"
black = "^23.3.0"
ruff = "^0.0.263"
mypy = "^1.2.0"
types-requests = "^2.31.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
